test/regexp_facade/invalid/InvalidMatchInput.hx
import ruby.Regexp;

class InvalidMatchInput {
	static function main():Void {
		new Regexp("ruby").match(42);
	}
}
